fixed contrast

--- a/assets/compiled.css
+++ b/assets/compiled.css
@@ -181,11 +181,11 @@
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-a {
+/* a {
   color: #1eaedb;
   text-decoration: underline;
   cursor: pointer;
-}
+} */
 a:hover {
   color: #0fa0ce;
 }
